package com.jason.factorymethod;

/**
 * Created by jsson on 16/11/25.
 */
abstract class Protocol {
        abstract void performRequest();
}
