package com.jason.factorymethod;

/**
 * Created by jsson on 16/11/25.
 */
public abstract class ProtocolFactory {
    public abstract Protocol createProtocol();
}
